# github-crawler

./: .dist.env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
scripts/: format.sh
src/: cli.py  settings.py
src/crawlers/: searcher.py
src/enums/: search_type.py
src/storage/input/: task.json
src/utils/: logger.py
tests/: conftest.py
tests/crawlers/: test_searcher.py
tests/fixtures/: detail.html  search.html
